--- a/Vite-Backend/api/.env
+++ b/Vite-Backend/api/.env
@@ -1,4 +1,7 @@
 User mdhyan99
 pasword : cudPpmHiQ8wz73uZ
+POrZlOzoKivU9tXV
+mdhyan9999
 
-MONGO_URL=mongodb+srv://mdhyan99:cudPpmHiQ8wz73uZ@cluster0.sndbwo1.mongodb.net/?retryWrites=true&w=majority
+# mongodb+srv://mdhyan9999:POrZlOzoKivU9tXV@cluster0.sndbwo1.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://mdhyan9999:POrZlOzoKivU9tXV@cluster0.60ibyoa.mongodb.net/?retryWrites=true&w=majority
